訂正と、ars_webの追加

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -49,6 +49,7 @@
         <activity android:name=".map.Main501Activity"/>
         <activity android:name=".map.Main502Activity"/>
         <activity android:name=".map.Map_main"/>
+        <activity android:name=".ars_web"/>
     </application>
 
 </manifest>
