--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -50,6 +50,7 @@
         <activity android:name=".map.Main502Activity"/>
         <activity android:name=".map.Map_main"/>
         <activity android:name=".ars_web"/>
+        <activity android:name=".QR.qr1_ans_ng_seigen" android:screenOrientation="landscape"/>
     </application>
 
 </manifest>
