--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -51,6 +51,7 @@
         <activity android:name=".map.Map_main"/>
         <activity android:name=".ars_web"/>
         <activity android:name=".QR.qr1_ans_ng_seigen" android:screenOrientation="landscape"/>
+        <activity android:name=".MainScreen.Arice"/>
 
         <meta-data
             android:name="preloaded_fonts"
